--- a/html/cara-bermain.html
+++ b/html/cara-bermain.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cara Bermain | KaliKu</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
@@ -136,14 +136,14 @@
     <div class="section-title">Langkah-Langkah Bermain</div>
     <ul class="step-list">
       <li><span class="material-icons">sports_esports</span> Dari halaman utama, pilih menu <b>Mainkan Game</b>.</li>
-      <li><span class="material-icons">category</span> Pilih level: Mudah, Sedang, Sulit, atau Mode Latihan.</li>
+      <li><span class="material-icons">category</span> Pilih level: Mudah, Sedang, atau Sulit.</li>
       <li><span class="material-icons">menu_book</span> Baca petunjuk singkat yang muncul di awal setiap level.</li>
-      <li><span class="material-icons">touch_app</span> Jawab soal dengan drag & drop angka jawaban ke kotak jawaban.</li>
-      <li><span class="material-icons">timer</span> Setiap soal memiliki batas waktu pengerjaan (semua level).</li>
-      <li><span class="material-icons" style="color:#e53935;">favorite</span> Jika salah atau waktu habis, <b>nyawa berkurang 1</b>.</li>
-      <li><span class="material-icons">help</span> Gunakan fitur Bantuan maksimal sesuai level (1x-3x), untuk tambah waktu 10 detik atau lihat cara hitung.</li>
-      <li><span class="material-icons">check_circle</span> Status benar dan salah akan ditampilkan di kiri atas.</li>
-      <li><span class="material-icons">emoji_events</span> Setelah selesai, lihat hasil dan level berikutnya jika lolos.</li>
+      <li><span class="material-icons">touch_app</span> Jawab soal dengan drag & drop angka jawaban ke kotak jawaban (dropzone).</li>
+      <li><span class="material-icons">timer</span> Setiap soal punya batas waktu 10 detik, perhatikan timer di layar.</li>
+      <li><span class="material-icons" style="color:#e53935;">favorite</span> Jawaban salah atau waktu habis mengurangi 1 nyawa.</li>
+      <li><span class="material-icons">help</span> Gunakan fitur Bantuan maksimal sesuai level (1x-3x) untuk tambah waktu atau lihat cara hitung.</li>
+      <li><span class="material-icons">check_circle</span> Status jumlah benar dan salah ditampilkan di kiri atas layar.</li>
+      <li><span class="material-icons">emoji_events</span> Selesaikan 20 soal dengan benar untuk membuka level berikutnya.</li>
     </ul>
 
     <div class="section-title">Sistem Nyawa Tiap Level</div>
@@ -186,7 +186,7 @@
     </div>
 
     <div class="text-center mt-4" style="color:#e99500; font-weight:600; font-size:1.09em;">
-      Selamat bermain dan raih hasil terbaik! 
+      Selamat bermain! 
       <span class="material-icons align-middle" style="font-size:1.25em;color:#ffc107;">emoji_events</span>
     </div>
   </div>
