--- a/html/petunjuk-penggunaan.html
+++ b/html/petunjuk-penggunaan.html
@@ -193,7 +193,7 @@
           </tr>
           <tr>
             <td><span class="material-icons">sports_esports</span> Mainkan Game</td>
-            <td>Pilih level: Mudah, Sedang, Sulit, Mode Latihan</td>
+            <td>Pilih level: Mudah, Sedang, Sulit</td>
           </tr>
           <tr>
             <td><span class="material-icons">timer</span> Timer</td>
