--- a/html/cara-bermain.html
+++ b/html/cara-bermain.html
@@ -135,7 +135,7 @@
 
     <div class="section-title">Langkah-Langkah Bermain</div>
     <ul class="step-list">
-      <li><span class="material-icons">sports_esports</span> Dari halaman utama, pilih menu <b>Mainkan Game</b>.</li>
+      <li><span class="material-icons">sports_esports</span> Dari halaman utama, pilih menu Mainkan Game.</li>
       <li><span class="material-icons">category</span> Pilih level: Mudah, Sedang, atau Sulit.</li>
       <li><span class="material-icons">menu_book</span> Baca petunjuk singkat yang muncul di awal setiap level.</li>
       <li><span class="material-icons">touch_app</span> Jawab soal dengan drag & drop angka jawaban ke kotak jawaban (dropzone).</li>
@@ -152,11 +152,11 @@
         <tbody>
           <tr>
             <th><span class="material-icons">eco</span> Mudah</th>
-            <td>1 digit × 1 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 5, bantuan 3x per permainan</td>
+            <td>1 digit × 1 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
           </tr>
           <tr>
             <th><span class="material-icons">star_half</span> Sedang</th>
-            <td>2 digit × 1 digit & 1 digit × 2 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 4, bantuan 3x per permainan</td>
+            <td>2 digit × 1 digit & 1 digit × 2 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
           </tr>
           <tr>
             <th><span class="material-icons">whatshot</span> Sulit</th>
