--- a/html/level-mudah.html
+++ b/html/level-mudah.html
@@ -288,7 +288,7 @@
                         <li>⏱️ Waktu: 10 detik per soal</li>
                         <li>✅ Jawaban benar = lanjut soal berikutnya</li>
                         <li>❌ Salah atau waktu habis = kehilangan 1 nyawa</li>
-                        <li>❤️ Total nyawa: 5. Jika habis, permainan selesai</li>
+                        <li>❤️ Total nyawa: 3. Jika habis, permainan selesai</li>
                     </ul>
                     <div class="alert alert-warning d-flex align-items-center gap-2 py-2 mt-2 mb-2 fs-6">
                         <span class="material-icons" style="color:#ffa000;">flag</span>
@@ -363,7 +363,7 @@
     <div class="modal fade" id="modalSukses" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content rounded-4 shadow-lg">
-                <div class="modal-header bg-gradient-success text-white d-flex align-items-center">
+                <div class="modal-header bg-warning text-white d-flex align-items-center">
                     <span class="material-icons fs-1 me-2">celebration</span>
                     <h5 class="modal-title flex-grow-1 fw-bold">Selamat!</h5>
                 </div>
@@ -462,10 +462,11 @@
 
         let musikAktif = true;
         let soundAktif = true;
-        let nyawa = 5, waktuSisa = 10, timerInterval;
+        let nyawa = 3, waktuSisa = 10, timerInterval;
         let indexSoal = 0, benarCount = 0, salahCount = 0, bantuanDigunakan = false;
         let bantuanTersisa = 3;
         let a, b, correctAnswer;
+        let level = "mudah";
 
         function updateSkorBenarSalah() {
             document.getElementById("jumlahBenar").textContent = benarCount;
