--- a/html/level-sedang.html
+++ b/html/level-sedang.html
@@ -333,7 +333,7 @@
                         <li>📝 Jawab setiap soal sebelum <strong>10 detik</strong>.</li>
                         <li>✅ Jawaban benar = lanjut soal berikutnya.</li>
                         <li>❌ Salah atau waktu habis = kehilangan 1 nyawa.</li>
-                        <li>❤️ Total nyawa: 4. Jika habis, permainan selesai.</li>
+                        <li>❤️ Total nyawa: 3. Jika habis, permainan selesai.</li>
                     </ul>
                     <div class="alert alert-warning d-flex align-items-center gap-2 py-2 mt-2 mb-2 fs-6">
                         <span class="material-icons" style="color:#ffa000;">flag</span>
@@ -406,7 +406,7 @@
     <div class="modal fade" id="modalSukses" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content rounded-4 shadow-lg">
-                <div class="modal-header bg-gradient-success text-white d-flex align-items-center">
+                <div class="modal-header bg-warning text-white d-flex align-items-center">
                     <span class="material-icons fs-1 me-2">celebration</span>
                     <h5 class="modal-title flex-grow-1 fw-bold">Selamat!</h5>
                 </div>
@@ -474,10 +474,11 @@
 
         let musikAktif = true;
         let soundAktif = true;
-        let nyawa = 4, waktuSisa = 10, timerInterval;
+        let nyawa = 3, waktuSisa = 10, timerInterval;
         let indexSoal = 0, benarCount = 0, salahCount = 0, bantuanDigunakan = false;
         let bantuanTersisa = 3;
         let a, b, correctAnswer;
+        let level = "sedang";
 
         function updateSkorBenarSalah() {
             document.getElementById("jumlahBenar").textContent = benarCount;
@@ -525,20 +526,32 @@
         }
 
         function penjelasanCaraHitung(a, b) {
-            // Tampilkan perkalian sebagai penjumlahan berulang
-            let faktor, pengali;
-            // Supaya jumlah penjumlahan tidak terlalu panjang, pakai faktor yang kecil sebagai pengali
-            if (b < a) {
-                faktor = b;
-                pengali = a;
+            if (level === "mudah") {
+                return `💡 Cara hitung: ${a} × ${b}`;
+            } else if (a >= 10 && b >= 10) {
+                // 2 digit × 2 digit
+                let pulA = Math.floor(a / 10), satA = a % 10;
+                let pulB = Math.floor(b / 10), satB = b % 10;
+                return `💡 Cara bersusun:<br>
+        - ${a} × ${b} =<br>
+        - (${pulA * 10} + ${satA}) × (${pulB * 10} + ${satB})<br>
+        - = (${pulA * 10} × ${pulB * 10}) + (${pulA * 10} × ${satB}) + (${satA} × ${pulB * 10}) + (${satA} × ${satB})<br>
+        - Jumlahkan semua hasil di atas.`;
+            } else if (a >= 10 || b >= 10) {
+                let dua = a >= 10 ? a : b;
+                let satu = a >= 10 ? b : a;
+                let puluhan = Math.floor(dua / 10);
+                let satuan = dua % 10;
+                return `💡 Cara bersusun:<br>
+        - ${dua} × ${satu} =<br>
+        - (${puluhan * 10} + ${satuan}) × ${satu}<br>
+        - = (${puluhan * 10} × ${satu}) + (${satuan} × ${satu})<br>
+        - Jumlahkan kedua hasil di atas.`;
             } else {
-                faktor = a;
-                pengali = b;
+                return `💡 Cara hitung: ${a} × ${b}`;
             }
-            // Buat string penjumlahan berulang
-            let penjumlahan = Array(faktor).fill(pengali).join(' + ');
-            return `💡 Cara hitung: ${a} × ${b} = ${penjumlahan} = ...`;
         }
+
 
         function waktuHabis() {
             const penjelasan = penjelasanCaraHitung(a, b);
